src/test/ui/editions/edition-deny-overflowing-literals-2018.rs
// edition:2018

fn main() {
    let x: u8 = 256;
    //~^ error: literal out of range for u8
}
